<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Roller_LC" Id="{dbdb847b-bc4c-4212-b53a-1382c6a33ba9}">
    <Declaration><![CDATA[TYPE Roller_LC :
STRUCT
	roller : Roller;	
	photo_sensor :BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>