<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="BagHeightStatus" Id="{ec3505ba-d5f1-46d6-8207-7b07f53afb45}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE BagHeightStatus:
(
    UNKNOWN := 0,
    OKAY := 1,
    NG := 2,
	ERROR := 3
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>